cambio de dataset y correccion del formato de salida del outputs.csv

--- a/descarga_DS.ipynb
+++ b/descarga_DS.ipynb
@@ -147,7 +147,7 @@
     "    print(\"📥 Dataset no encontrado, descargando...\")\n",
     "    api = KaggleApi()\n",
     "    api.authenticate()\n",
-    "    api.dataset_download_files(\"irvingvasquez/publicsargazods\", path=directorio, unzip=True)\n",
+    "    api.dataset_download_files(\"sergiogiles/sargacerosds\", path=directorio, unzip=True)\n",
     "    print(f\"✅ Dataset descargado en ./{directorio}\")"
    ]
   },
@@ -268,15 +268,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np \n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
     "from skimage import io, transform\n",
     "from PIL import Image\n",
-    "import os\n",
     "import time\n",
     "import copy\n",
-    "\n",
     "from torch.utils.data import Dataset, DataLoader\n",
     "import torch\n",
     "import torch.nn as nn\n",
@@ -1042,7 +1037,7 @@
     "output_df = pd.DataFrame(data=temp)\n",
     "output_df.sample(10)\n",
     "\n",
-    "output_df.to_csv('outputs.csv')"
+    "output_df.to_csv('outputs.csv', index=False)"
    ]
   },
   {
